--- a/02-vars.yml
+++ b/02-vars.yml
@@ -1,6 +1,8 @@
 - name: Demo on vars
   hosts: localhost
+  vars:
+    URL: play.example.com
   tasks:
     - name: Print Hello
       ansible.builtin.debug:
-        msg: Hello
+        msg: URL {{URL}}
