--- a/02-vars.yml
+++ b/02-vars.yml
@@ -5,13 +5,13 @@
   tasks:
     - name: Print URL
       ansible.builtin.debug:
-        msg: URL {{ URL }}
+        msg: URL = {{ URL }}
 
 - name: Demo on vars on task level
   hosts: localhost
   tasks:
     - name: Print URL
       ansible.builtin.debug:
-        msg: URL {{ URL }}
+        msg: URL = {{ URL }}
       vars:
         URL: task.example.com
