--- a/02-vars.yml
+++ b/02-vars.yml
@@ -18,7 +18,7 @@
 
 - name: Demo on vars from file on play level
   hosts: localhost
-  var_files:
+  vars_files:
     - sample-vars.yml
   tasks:
     - name: Print URL
