vars.yml script

--- a/02-vars.yml
+++ b/02-vars.yml
@@ -1,40 +1,40 @@
-- name: Demo on vars play level
-  hosts: all
-  connection: local
-  vars:
-    URL: play.example.com
-  tasks:
-    - name: Print URL
-      ansible.builtin.debug:
-        msg: URL = {{ URL }}
+#- name: Demo on vars play level
+#  hosts: all
+#  connection: local
+#  vars:
+#    URL: play.example.com
+#  tasks:
+#    - name: Print URL
+#      ansible.builtin.debug:
+#        msg: URL = {{ URL }}
 
-- name: Demo on vars on task level
-  hosts: all
-  connection: local
-  tasks:
-    - name: Print URL
-      ansible.builtin.debug:
-        msg: URL = {{ URL }}
-      vars:
-        URL: task.example.com
+#- name: Demo on vars on task level
+#  hosts: all
+#  connection: local
+#  tasks:
+#    - name: Print URL
+#      ansible.builtin.debug:
+#        msg: URL = {{ URL }}
+#      vars:
+#        URL: task.example.com
 
-- name: Demo on vars from file on play level
-  hosts: all
-  connection: local
-  vars_files:
-    - sample-vars.yml
-  tasks:
-    - name: Print URL
-      ansible.builtin.debug:
-        msg: URL = {{ URL }}
+#- name: Demo on vars from file on play level
+#  hosts: all
+#  connection: local
+#  vars_files:
+#    - sample-vars.yml
+#  tasks:
+#    - name: Print URL
+#      ansible.builtin.debug:
+#        msg: URL = {{ URL }}
 
-- name: Vars from inventory file
-  hosts: all
-  connection: local
-  tasks:
-    - name: Print URL
-      ansible.builtin.debug:
-        msg: URL = {{ URL }}
+#- name: Vars from inventory file
+#  hosts: all
+#  connection: local
+#  tasks:
+#    - name: Print URL
+#      ansible.builtin.debug:
+#        msg: URL = {{ URL }}
 
 - name: Declare a Fact
   hosts: all
