--- a/02-vars.yml
+++ b/02-vars.yml
@@ -52,6 +52,10 @@
       ansible.builtin.shell: uptime
       register: out
 
+    - name: Register a fact
+      ansible.builtin.set_fact:
+        UPTIME: "{{out.stdout}}"
+
     - name: Print out
       ansible.builtin.debug:
-        msg: "{{out.stdout}}"
+        msg: "UPTIME"
