--- a/02-vars.yml
+++ b/02-vars.yml
@@ -59,3 +59,9 @@
     - name: Print out
       ansible.builtin.debug:
         msg: "{{UPTIME}}"
+
+- name: Vars print from roles
+  hosts: all
+  connection: local
+  roles:
+    - sample
