--- a/03-conditions.yml
+++ b/03-conditions.yml
@@ -1,7 +1,7 @@
 - name: Demo on conditions
   hosts: localhost
   tasks:
-    - name: Print Hello if variable is defined
+    - name: Print Hello when variable is defined
       when: Hello is defined
       ansible.builtin.debug:
         msg: Hello
