--- a/04-parameter-store.yml
+++ b/04-parameter-store.yml
@@ -1,5 +1,6 @@
 - name: Print a parameter store
   hosts: localhost
   tasks:
-    ansible.buitlin.debug:
-      msg: "{{ lookup('asw_ssm', 'param.dev.catalogue.MONGO', region=us-east-1') }}"
+    - name: print a parameter
+      ansible.builtin.debug:
+        msg: "{{ lookup('aws_ssm', 'param.dev.catalogue.MONGO', region='us-east-1') }}"
