--- a/06-filters.yml
+++ b/06-filters.yml
@@ -5,4 +5,4 @@
   tasks:
     - name: filter
       ansible.builtin.debug:
-        msg: "{{ out | split('\n')}}"
+        msg: "{{ CONTENT | split('\n') }}"
